tests/reference/llvm-global_scope1-b0a630a.stderr
syntax error: Expected program end
 --> tests/global_scope1.f90:1:1
  |
1 | integer :: x
  | ^^^^^^^^^^^^ 
